@@ -623,12 +623,14 @@ SCRIPTS_TO_RUN = case-warnings.scm uninit1.scm \
   srfi-45-test1.scm srfi-45-test2.scm bad-srfi-109.scm \
   define1.scm define2.scm define3.scm mac-obj.scm overload1.scm symbol1.scm \
   command1.scm command2.scm command3.scm exit1.scm exit2.scm lib-cycle.scm \
-  lib-square.scm lib-squaref.scm \
+  lib-square.scm lib-squaref.scm lib-impsrc1.scm lib-impsrc2.scm lib-dup.scm \
   sva34005.scm sva35362.scm sva36039.scm sva36413.scm sva36556.scm \
   sva36853.scm sva36863.scm sva36917.scm sva37684.scm sva38026.scm \
   sva39060.scm sva39150.scm sva39945.scm sva39940.scm sva39947.scm \
   sva40077.scm sva40494.scm sva40649.scm sva40729.scm sva40814.scm \
   sva42377.scm sva42382.scm sva42689.scm sva42722.scm sva43131.scm
+# Files needed for SCRIPTS_TO_RUN
+AUX_FOR_SCRIPTS_TO_RUN = aux-libs.scm
 EXTRA_DIST = testing.scm test-utils.scm \
   test.scm case-test.scm num-test.scm numeric-tests.scm \
   mac-test.scm mac1.scm r7rs-tests.scm \
@@ -663,4 +665,4 @@ EXTRA_DIST = testing.scm test-utils.scm \
   spectralnorm.scm spectralnorm-output.txt \
   threadring.scm threadring-output.txt \
   moduleM.scm moduleM.expected life-grid.scm life-grid.expected \
-  $(SCRIPTS_TO_RUN)
+  $(SCRIPTS_TO_RUN) $(AUX_FOR_SCRIPTS_TO_RUN)
