@@ -1,0 +1,2 @@
+(import (lib33 "aux-libs.scm"))
+;; Diagnostic-pattern: .*lib-impsrc2.scm:1:9: file '.*aux-libs.scm' does not declare library 'lib33'
